[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentloop-py-openai"
version = "0.1.2"
description = "Drop-in OpenAI SDK wrapper for AgentLoop — adds memory retrieval and turn logging to chat.completions.create calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentLoop" }]
keywords = ["openai", "gpt", "llm", "agents", "agentloop", "memory", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentloop-py>=0.1.3",
    "openai>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/martinembon/agentloop-py"
Repository = "https://github.com/martinembon/agentloop-py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloop_openai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
