[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentloop-py"
version = "0.1.3"
description = "AgentLoop SDK — middleware that turns human corrections into searchable memory for your agent."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentLoop" }]
keywords = [
    "llm",
    "agents",
    "openai",
    "anthropic",
    "feedback",
    "evaluation",
    "corrections",
    "memory",
    "rag",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",  # httpx mocking — cleanest way to test both sync + async
]

[project.urls]
Homepage = "https://github.com/martinembon/agentloop-py"
Repository = "https://github.com/martinembon/agentloop-py"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloop"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
