[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentloop-anthropic"
version = "0.1.1"
description = "Drop-in Anthropic SDK wrapper for AgentLoop — adds memory retrieval and turn logging to messages.create calls."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AgentLoop" }]
keywords = ["anthropic", "claude", "llm", "agents", "agentloop", "memory", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "agentloop-sdk>=0.1.2",
    "anthropic>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/martinembon/agentloop-sdk"
Repository = "https://github.com/martinembon/agentloop-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/agentloop_anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
